syntax = "proto3";
package learn_grpc_01;
option go_package="learn_grpc/01/proto/gen/go;trippb";// 生成的路径是:learn_grpc/01/proto/gen/go  生成的包名为 trippb

message Location {
    double latitude = 1;
    double longitude = 2;
}

enum TripStatus {
    TS_NOT_SPECIFIED = 0;
    NOT_STARTED = 1;
    IN_PROGRESS = 2;
    FINISHED = 3;
    PAID = 4;
}

message Trip {
    string start = 1;
    Location start_pos = 5;
    repeated Location path_locations = 7;
    string end = 2;
    Location end_pos = 6;
    int64 duration_sec = 3;
    int64 fee_cent = 4;
    TripStatus status = 8;
}

message GetTripRequest {
    string id = 1;
}

message GetTripResponse {
    string id = 1;
    Trip trip = 2;
}

service TripService {
    rpc GetTrip(GetTripRequest) returns (GetTripResponse);
}

// protoc -I=. --go_out=plugins=grpc,paths=source_relative:gen/go trip.proto  生成相对路径
